Running current version/Compiling and Running TRed Version 3.txt
		Compiling and Running TRed Version 3

When compiled with

g++ -o main.exe main.cpp oneiteration.cpp createarray.cpp buildk.cpp tracek.cpp errorsarray.cpp printcompact.cpp

the compile displays the following errors:

In file included from buildk.cpp:161:
c:\mingw\include\string.h:143:40: error: conflicting declaration of 'char* strrev(char*)' with 'C' linkage
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strrev (char *);
                                        ^~~~~~
In file included from buildk.cpp:159:
buildk.h:19:7: note: previous declaration with 'C++' linkage
 char *strrev(char *string);
       ^~~~~~
In file included from tracek.cpp:115:
c:\mingw\include\string.h:143:40: error: conflicting declaration of 'char* strrev(char*)' with 'C' linkage
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strrev (char *);
                                        ^~~~~~
In file included from tracek.cpp:113:
buildk.h:19:7: note: previous declaration with 'C++' linkage
 char *strrev(char *string);
       ^~~~~~

Looks like the prototype is what causes the errors, and it should be deleted from the file. The reason is that `strrev` already exists in the C library and does not have to be redefined.

The repeated function was eliminated and the compilation succeeded.

The main program and the 'nofilter' program were run on a part of Chromosome Y and displayed proper results, alignments, and error counting.

